--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Counter using HTML</title>
-    <link rel="stylesheet" href="style.css">
+   
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
@@ -23,6 +24,7 @@
         <button id="clearBtn" class="clear-btn">Clear</button>
     </div>
 
-    <script src="script.js"></script>
+   
+    <script src="Script.js"></script>
 </body>
 </html>
